--- a/_posts/2018-06-05-5分钟带你看完-WWDC-2018.md
+++ b/_posts/2018-06-05-5分钟带你看完-WWDC-2018.md
@@ -1,9 +1,9 @@
 ---
 layout:     post
-title:      5分钟带你看完 WWDC 2018
-subtitle:   WWDC 2018 Keynote 全记录
-date:       2018-06-05
-author:     BY
+title:      iOS面试题---初级 
+subtitle:   iOS初级面试题
+date:       2020-01-16
+author:     ztx
 header-img: img/post-bg-cook.jpg
 catalog: true
 tags:
