--- a/_posts/2020-01-16-iOS初级面试题.md
+++ b/_posts/2020-01-16-iOS初级面试题.md
@@ -19,8 +19,8 @@ tags:
 
 ## 2、copy 和 mutableCopy 的区别**
 
- ### 2.1、NSArray 用 copy 和 mutableCopy 修饰的不同
- ### 2.2、NSMutableArray 用 copy 和 mutableCopy 修饰的不同
+ ### 2.1、NSArray 用 copy 和 mutableCopy 修饰的不同**
+ ### 2.2、NSMutableArray 用 copy 和 mutableCopy 修饰的不同**
 
 ## 3、介绍一下 TableView 的代理和数据源方法,讲一下他们的调用顺序**
 
@@ -34,6 +34,6 @@ tags:
 
 ## 8、使用 #import 跟 #include 、@class 的区别是什么，分别在什么情况下使用**
 
-  ### 8.1、 扩展：在.h 文件中一般使用哪个，为什么
+  ### 8.1、 扩展：在.h 文件中一般使用哪个，为什么**
 
 ## 9、原子(atomic)跟非原子(non-atomic)属性有什么区别?**
